--- a/Code/pubspec.yaml
+++ b/Code/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   provider: 
   sizer: 
   webview_flutter: 
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_core: ^2.24.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
@@ -40,7 +44,14 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-    - assets/
+    - assets/models/
+    - assets/models/mt/
+    - assets/models/stones/
+    - assets/models/rivers/
+    - assets/models/stream/
+    - assets/models/volcanoes/
+    - assets/models/stream/erosion/
+    
 
   fonts:
     - family: Hanken Grotesk
